--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -6,14 +6,13 @@ body {
     display: flex;
     align-items: center;
     padding: 10px 20px;
-    margin: 20px 50px;
+    margin: 20px 180px;
 }
 
 .header-container h1 {
     font-size: 32px;
-    font-weight: Bold;
+    font-weight: bold;
     color: #1945ff;
-    /* 濃い青色 */
     margin: 0;
     display: flex;
     align-items: center;
@@ -21,22 +20,16 @@ body {
 
 .icon-box {
     background-color: #2755fe;
-    /* 濃い青色 */
     padding: 8px;
-    /* アイコン周りのスペース */
     border-radius: 4px;
-    /* 角を丸く */
     display: flex;
     align-items: center;
     justify-content: center;
     margin-right: 20px;
-    /* テキストとの間隔 */
     box-shadow: 2px 4px 8px #687cc1;
 }
 
 .icon-box i {
     font-size: 32px;
-    /* アイコンのサイズ */
     color: white;
-    /* アイコンの色 */
 }
