--- a/src/public/css/shop_list.css
+++ b/src/public/css/shop_list.css
@@ -14,8 +14,11 @@
     align-items: center;
 }
 
-.filter {
+.filter-container {
     width: 100%;
+}
+
+.filter {
     display: flex;
     align-items: stretch;
     height: 50px;
@@ -26,25 +29,54 @@
 }
 
 .filter select,
-.filter input {
+.search-wrapper {
     border: none;
     outline: none;
-    padding: 10px;
     height: 100%;
     box-sizing: border-box;
 }
 
 .filter select {
     flex: 1;
+    padding: 10px;
     border-right: 1px solid #e9ecef;
 }
 
+.search-wrapper {
+    flex: 3;
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
 #search-input {
-    flex: 2;
-    padding-left: 15px;
-    display: block !important;
-    visibility: visible !important;
-    opacity: 1 !important;
+    width: 100%;
+    height: 100%;
+    border: none;
+    outline: none;
+    padding: 10px 10px 10px 40px;
+    box-sizing: border-box;
+}
+
+.search-icon {
+    position: absolute;
+    left: 10px;
+    width: 20px;
+    height: 20px;
+    color: #6c757d;
+}
+
+@media (max-width: 768px) {
+    .filter {
+        flex-direction: column;
+        height: auto;
+    }
+
+    .filter select,
+    .search-wrapper {
+        width: 100%;
+        margin-bottom: 10px;
+    }
 }
 
 .grid {
