--- a/src/public/css/reservation_complete.css
+++ b/src/public/css/reservation_complete.css
@@ -1,4 +1,10 @@
 /* コンテナのスタイル */
+.container {
+    width: 80%;
+    margin: 0 auto;
+    padding: 20px;
+}
+
 .reservation-complete-container {
     width: 400px;
     margin: 100px auto;
